// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[alpha]: http://example.com

=====================================output=====================================
[alpha]: http://example.com

================================================================================
`;

exports[`space.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[alpha]: <http://example.com 123> "title"

=====================================output=====================================
[alpha]: <http://example.com 123> "title"

================================================================================
`;

exports[`title.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[alpha]: http://example.com "title"

=====================================output=====================================
[alpha]: http://example.com "title"

================================================================================
`;
